fix: add margin to kbd element for improved spacing

--- a/demo/picker.css
+++ b/demo/picker.css
@@ -79,6 +79,7 @@ kbd {
   font-size: 2em;
   letter-spacing: -0.03em;
   font-weight: 200;
+  margin-top: 1.5rem;
   margin-bottom: 0.5rem;
 }
 
